added full octave with keyboard control + Envelope generator foundation

--- a/Synth_project/Synth_project.vcxproj
+++ b/Synth_project/Synth_project.vcxproj
@@ -147,6 +147,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ADSR.h" />
     <ClInclude Include="olcNoiseMaker.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
