--- a/Synth_project/Synth_project.vcxproj.filters
+++ b/Synth_project/Synth_project.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="olcNoiseMaker.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ADSR.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
