core game functionallity finished

--- a/F_This_Game/F_This_Game/F_This_Game.vcxproj
+++ b/F_This_Game/F_This_Game/F_This_Game.vcxproj
@@ -118,12 +118,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\SDL2_image\include;C:\SDL2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\SDL2_image\lib\x64;C:\SDL2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,13 +144,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="level.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="background.cpp" />
+    <ClCompile Include="message.cpp" />
+    <ClCompile Include="obstacle.cpp" />
+    <ClCompile Include="floor.cpp" />
+    <ClCompile Include="player.cpp" />
+    <ClCompile Include="setup.cpp" />
+    <ClCompile Include="textures.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="obstacles.h" />
+    <ClInclude Include="controls.h" />
+    <ClInclude Include="ECS.h" />
+    <ClInclude Include="background.h" />
+    <ClInclude Include="level.h" />
+    <ClInclude Include="message.h" />
+    <ClInclude Include="obstacle.h" />
+    <ClInclude Include="floor.h" />
+    <ClInclude Include="player.h" />
     <ClInclude Include="recourses.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="setup.h" />
     <ClInclude Include="spike.h" />
     <ClInclude Include="square.h" />
+    <ClInclude Include="textures.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="F_This_Game.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
